fix: correct proxy bean registration and fail fast on missing or ambiguous dependencies