@@ -1,22 +1,17 @@
 package com.sprout.core.ioc;
 
-import com.sprout.core.annotation.Wire;
-import com.sprout.core.annotation.Wireable;
+import com.sprout.core.annotation.*;
+import com.sprout.core.exception.NoSuchBeanDefinitionException;
+import com.sprout.core.exception.NoUniqueBeanDefinitionException;
 
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Modifier;
+import java.lang.annotation.Annotation;
+import java.lang.reflect.*;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -24,6 +19,7 @@ public class BeanContainer {
 
     private static final Logger logger = Logger.getLogger(BeanContainer.class.getName());
     private final Map<Class<?>, Object> beans = new HashMap<>();
+    private final Map<Object, Object> proxyToTarget = new HashMap<>();
 
     public void start(String packageName) {
         List<Class<?>> result = scan(packageName);
@@ -96,39 +92,58 @@ public class BeanContainer {
     }
 
     private void instantiate(List<Class<?>> discoveredClasses) {
-        for (Class<?> discClass : discoveredClasses) {
-            if (isIneligibleForWiring(discClass)) {
-                logger.info("Class is ineligible for wiring: " + discClass.getName());
+        for (Class<?> clazz : discoveredClasses) {
+            if (isIneligibleForWiring(clazz)) {
+                logger.info("Class is ineligible for wiring: " + clazz.getName());
                 continue;
             }
             try {
-                Constructor<?> constructor = discClass.getDeclaredConstructor();
-                constructor.setAccessible(true);
-                this.beans.put(
-                        discClass,
-                        constructor.newInstance()
-                );
+                Object target = clazz.getDeclaredConstructor().newInstance();
+                Object finalBean = target;
+                if (needsAop(clazz)) {
+                    if (clazz.getInterfaces().length == 0) {
+                        logger.warning("No interface for the proxy to implement for class:" + clazz.getName());
+                        this.beans.put(clazz, target);
+                    } else {
+                        Object proxy = Proxy.newProxyInstance(
+                                target.getClass().getClassLoader(),
+                                target.getClass().getInterfaces(),
+                                new AspectInterceptor(target)
+                        );
+                        finalBean = proxy;
+                        proxyToTarget.put(proxy, target);
+                    }
+                } else {
+                    this.beans.put(clazz, target);
+                }
+                for (Class<?> implInterface : clazz.getInterfaces()) {
+                    Object beanValue = this.beans.putIfAbsent(implInterface, finalBean);
+                    if (beanValue != null) {
+                        throw new NoUniqueBeanDefinitionException(implInterface + " is claimed by both " + beanValue + " and " + finalBean);
+                    }
+                }
             } catch (NoSuchMethodException | InstantiationException | IllegalAccessException |
                      InvocationTargetException e) {
-                logger.log(Level.WARNING, "Failed to instantiate bean: " + discClass.getName(), e);
+                logger.log(Level.WARNING, "Failed to instantiate bean: " + clazz.getName(), e);
             }
         }
     }
 
     private void inject() {
-        for (Map.Entry<Class<?>, Object> bean : this.beans.entrySet()) {
-            Field[] beanFields = bean.getKey().getDeclaredFields();
+        for (Object bean : this.beans.values()) {
+            bean = proxyToTarget.getOrDefault(bean, bean);
+
+            Field[] beanFields = bean.getClass().getDeclaredFields();
             for (Field field : beanFields) {
                 if (!field.isAnnotationPresent(Wire.class)) continue;
                 Class<?> fieldType = field.getType();
                 if (!this.beans.containsKey(fieldType)) {
-                    logger.warning("Dependency not found: " + fieldType);
-                    continue;
+                    throw new NoSuchBeanDefinitionException(field.getName() + " " + fieldType + " " + field.getClass());
                 }
                 try {
                     field.setAccessible(true);
-                    field.set(bean.getValue(), this.beans.get(fieldType));
-                } catch (IllegalAccessException e) {
+                    field.set(bean, this.beans.get(fieldType));
+                } catch (IllegalAccessException | IllegalArgumentException e) {
                     logger.log(Level.WARNING, "Failed to inject field: " + field.getName(), e);
                 }
             }
@@ -137,5 +152,28 @@ public class BeanContainer {
 
     private boolean isIneligibleForWiring(Class<?> clazz) {
         return clazz.isInterface() || Modifier.isAbstract(clazz.getModifiers()) || !clazz.isAnnotationPresent(Wireable.class);
+    }
+
+    private boolean needsAop(Class<?> clazz) {
+        return Arrays.stream(clazz.getDeclaredMethods()).anyMatch(m ->
+                (m.isAnnotationPresent(Logged.class) || interfaceAnnotationFallback(clazz, m, Logged.class)) ||
+                (m.isAnnotationPresent(MyTransactional.class) || interfaceAnnotationFallback(clazz, m, MyTransactional.class)) ||
+                (m.isAnnotationPresent(MyRetry.class) || interfaceAnnotationFallback(clazz, m, MyRetry.class))
+        );
+    }
+
+    private boolean isExactMethod(Method m1, Method m2) {
+        if (!m1.getName().equals(m2.getName()))
+            return false;
+
+        return Arrays.equals(m1.getParameterTypes(), m2.getParameterTypes());
+    }
+
+    private boolean interfaceAnnotationFallback(Class<?> clazz, Method m1, Class<? extends Annotation> annotation) {
+        return Arrays.stream(clazz.getInterfaces()
+                ).anyMatch(c ->
+                Arrays.stream(c.getDeclaredMethods()
+                ).anyMatch(m2 -> isExactMethod(m1, m2) && m2.isAnnotationPresent(annotation))
+        );
     }
 }
